--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<html>
 <script>
 
     /*** FUNCTIONS ***/
@@ -3509,3 +3510,4 @@ li.sample span.txt:after {
 		<div class="infoLine byFileInfo">If you want to move your board data you can exporting and importing by file. </div>
 	</div>
 </div>
+</html>
