--- a/index.html
+++ b/index.html
@@ -3395,6 +3395,14 @@ li.sample span.txt:after {
 			</div>
 		</div>
 		
+		<div class="imageBg">
+			<button id="boardBg"></button>
+			<div class="bgs" id="bgOptions">
+				<div>BG IMAGE</div><span>URL</span><span>NONE</span>
+				<div id="byUrl"><input type="text" placeholder="url" id="urlImage"><button id="submitUrl" onclick="getUrl()">OK</button></div>
+			</div>
+		</div>
+		
 		<div class="boardHeight">
 			<button id="boardFull" onclick="changeListHeight(this.id)"></button>
 			<div class="heightToggle">
