--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     }
     
     function drag(ev) {
-        ev.dataTransfer.setData("text/html", ev.target.id);
+        ev.dataTransfer.setData("text", null);
     }
     
     function drop(ev, el) {
